# arrest

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  app.py  index.html  mkdocs.yml  model.py  models.py  objects.inv  openapi_petstore.json  openapi_schema.json  profiler.py  pyproject.toml  regex.ipynb  requirements.dev.txt  requirements.docs.txt  requirements.extras.txt  requirements.txt  ruff.toml  scratchpad.py  test.ipynb  tox.ini  zensical.toml
.github/workflows/: docs.yml  release.yml  release_test.yml  tests.yml
api/: index.html
api-documentation/: index.html
arrest/: __init__.py  __main__.py  _config.py  common.py  converters.py  defaults.py  exceptions.py  handler.py  http.py  logging.py  params.py  resource.py  response.py  service.py  types.py  utils.py
arrest/cli/: _config.py  arguments.py
arrest/openapi/: __init__.py  _base.py  _config.py  init_template.py  parser.py  request.py  resource.py  resource_template.py  response.py  service_template.py  spec.py  utils.py
arrest/openapi/templates/: macros.jinja2  request.py  resources.jinja2  service.jinja2  service.py  services.jinja2
arrest/resource/: resource.py
arrest/service/: service.py
configuring-request/: index.html
dev-note/: index.html
docs/: api-documentation.md  api.md  configuring-request.md  dev-note.md  examples.md  faq.md  getting-started.md  index.md  making-a-request.md  migration.md  openapi.md  quickstart.md  release-notes.md  resources-services.md  whats-new.md
example/: .env  Dockerfile  docker-compose.yml  main.py  requirements.example.txt  requirements.txt  run.sh  test_models_pydantic.py  test_routes.py  test_sample.py  test_untyped.py
example/app/: data.py  main.py  models.py
example/app/routes/: tasks.py  users.py
example/example_service/: models.py  resources.py  services.py
example/models/: users.py
example/routes/: users.py
example/tests/: test_models_dataclass.py  test_models_pydantic.py  test_models_python.py  test_untyped.py
examples/: index.html
getting-started/: index.html
openapi/: index.html
release-notes/: index.html
resources-services/: index.html
scripts/: clean.sh  coverage.sh  lint.sh  regenerate_fixtures.py  test.sh
search/: search_index.json
swagger_petstore_openapi_3_0/: models.py  resources.py  services.py
tests/: __init__.py  __test_one.py  __test_request_path_params.py  conftest.py  test_arbitrary_handler_types.py  test_body.py  test_callback.py  test_cli.py  test_converters.py  test_exceptions.py  test_headers.py  test_http_methods.py  test_httpx.py  test_one.py  test_path_params.py  test_path_regex.py  test_query.py  test_query_params.py  test_replace_path_params.py  test_request_body_params.py  test_request_custom_handler.py  test_request_header_params.py  test_request_path_params.py  test_request_query_params.py  test_request_with_retries.py  test_resource.py  test_response.py  test_service.py  test_utils.py  test_validate_model.py
tests/fixtures/: openapi_petstore.json  openapi_petstore.yaml  openapi_petstore_3.1.yaml  openapi_petstore_3.1_with_root.json  openapi_petstore_schema_long_name.json
tests/integration/: test_auth.py  test_callback.py  test_exceptions.py  test_headers.py  test_http_methods.py  test_request_body_params.py  test_request_custom_handler.py  test_request_header_params.py  test_request_query_params.py  test_request_with_retries.py  test_response.py
tests/openapi/: test_file_generation.py  test_parser.py  test_schema_validation.py  test_template.py  test_utils.py
tests/unit/: __test_requests.py  conftest.py  test_cli.py  test_converters.py  test_httpx_configuration.py  test_path_params.py  test_path_regex.py  test_resource.py  test_service.py  test_utils.py
whats-new/: index.html
