[project]
name = "arrest"
version = "0.2.0"
description = "Declarative, type-safe HTTP client with Pydantic validation"
authors = [{ name = "shiladitya Bose", email = "shiladitya_basu@live.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["arrest", "rest", "pydantic", "httpx", "api"]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.27.0",
    "orjson>=3.9.10",
    "pyyaml>=6.0.1",
    "argcomplete>=3.2.2",
    "tenacity>=8.5.0",
    "pydantic-xml>=2.21.0",
]

[project.urls]
Homepage = "https://s-bose.github.io/arrest"
Repository = "https://github.com/s-bose/arrest"
Documentation = "https://s-bose.github.io/arrest"
Changelog = "https://s-bose.github.io/arrest/release-notes"

[project.scripts]
arrest = "arrest.__main__:main"

[project.optional-dependencies]
openapi = [
    "jinja2>=3.1.3",
    "datamodel-code-generator>=0.33.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "respx>=0.20.2",
]
dev = [
    "pre-commit>=4.6.0",
    "bandit>=1.7.5",
    "ruff>=0.15.20",
    "safety>=3.8.1",
]
docs = [
    "mkdocstrings-python>=2.0.5",
    "zensical>=0.0.46",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arrest"]

[tool.pytest.ini_options]
addopts = "--ignore=example"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests/*", "*.jinja2"]
source = ["arrest"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ImportError",
    "if __name__ == .__main__.:",
]
